--- a/neco-app/composer.json
+++ b/neco-app/composer.json
@@ -15,7 +15,8 @@
         "laravel/framework": "^7.29",
         "laravel/sanctum": "^2.8",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^2.4"
+        "laravel/ui": "^2.4",
+        "pusher/pusher-php-server": "^4.1"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
