--- a/neco-app/package.json
+++ b/neco-app/package.json
@@ -26,6 +26,9 @@
     },
     "dependencies": {
         "chokidar": "^3.0.0",
+        "dotenv": "^6.2.0",
+        "laravel-echo": "^1.10.0",
+        "pusher-js": "^7.0.3",
         "vue-router": "^3.5.0",
         "vuetify": "^2.4.3",
         "vuex": "^3.6.0"
