--- a/neco-app/package.json
+++ b/neco-app/package.json
@@ -28,7 +28,9 @@
         "chokidar": "^3.0.0",
         "dotenv": "^6.2.0",
         "laravel-echo": "^1.10.0",
+        "moment": "^2.29.1",
         "pusher-js": "^7.0.3",
+        "vee-validate": "^3.4.5",
         "vue-router": "^3.5.0",
         "vuetify": "^2.4.3",
         "vuex": "^3.6.0"
